--- a/views/menu.xml
+++ b/views/menu.xml
@@ -25,7 +25,7 @@
     <menuitem name="Siswa" id="siswa_ocb11.menu_siswa" parent="siswa_ocb11.submenu_master" action="siswa_ocb11.res_siswa_action_window"  sequence="5"/>
 
     <!-- Kesisswaan -->
-    <menuitem name="Siswa" id="siswa_ocb11.menu_siswa_by_rombel_new" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.rombel_siswa_action_window"  sequence="1"/>
+    <menuitem name="Siswa Aktif" id="siswa_ocb11.menu_siswa_by_rombel_new" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.rombel_siswa_action_window"  sequence="1"/>
     <menuitem name="Non Aktif" id="siswa_ocb11.menu_siswa_non_aktif" parent="siswa_ocb11.submenu_kesiswaan" action="siswa_ocb11.siswa_non_aktif_action_window"  sequence="2"/>    
 
     <menuitem name="Pindah Kelas" id="siswa_ocb11.menu_pindah_kelas" parent="siswa_ocb11.submenu_operation" action="siswa_ocb11.wizard_pindah_kelas"  sequence="1"/>
