--- a/views/rombel_siswa.xml
+++ b/views/rombel_siswa.xml
@@ -11,6 +11,10 @@
                     <field name="induk" string="No. Induk" />
                     <field name="nis"/>
                     <field name="jenis_kelamin"/>
+                    <field name="ayah"/>
+                    <field name="telp_ayah"/>
+                    <field name="ibu"/>
+                    <field name="telp_ibu"/>
                     <field name="rombel_id" invisible="1"/>
                     <field name="tahunajaran_id" invisible="1"/>
                 </tree>
@@ -37,7 +41,7 @@
         </record>
 
         <record model="ir.actions.act_window" id="siswa_ocb11.rombel_siswa_action_window">
-            <field name="name">Siswa</field>
+            <field name="name">Siswa Aktif</field>
             <field name="res_model">siswa_ocb11.rombel_siswa</field>
             <field name="view_mode">tree,form</field>
             <field name="domain">[('tahunajaran_id.active','=',True)]</field>
