--- a/views/wizard_non_aktif.xml
+++ b/views/wizard_non_aktif.xml
@@ -20,6 +20,12 @@
                             </group>
                         </group>
                     </sheet>
+                    <footer class="oe_edit_only" >
+                        <button name="action_save" type="object"
+                            string="Save" class="oe_highlight"/>
+                            
+                        <button special="cancel" string="Cancel"/>
+                    </footer>
                 </form>
             </field>
         </record>
