--- a/views/wizard_non_aktif.xml
+++ b/views/wizard_non_aktif.xml
@@ -8,10 +8,10 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="tahunajaran_id" options="{'no_create_edit': True,'no_open':True}"/>
-                                <field name="siswa_id" options="{'no_create_edit': True,'no_open':True}" />                    
+                                <field name="tahunajaran_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}"/>
+                                <field name="siswa_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />                    
                                 <field name="induk" readonly='1' />                    
-                                <field name="rombel_asal_id" options="{'no_create_edit': True,'no_open':True}" />
+                                <field name="rombel_asal_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />
                             </group>
                             <group>
                                 <field name="tanggal" />
