--- a/views/wizard_mutasi.xml
+++ b/views/wizard_mutasi.xml
@@ -9,9 +9,9 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="tahunajaran_id" options="{'no_create_edit': True,'no_open':True}"/>
-                                <field name="siswa_id" options="{'no_create_edit': True,'no_open':True}" />                    
-                                <field name="rombel_asal_id" options="{'no_create_edit': True,'no_open':True}" />
+                                <field name="tahunajaran_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}"/>
+                                <field name="siswa_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />                    
+                                <field name="rombel_asal_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />
                             </group>
                             <group>
                                 <field name="mutasi_ke"  />
