--- a/views/wizard_pindah_kelas.xml
+++ b/views/wizard_pindah_kelas.xml
@@ -9,14 +9,14 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="tahunajaran_id" options="{'no_create_edit': True,'no_open':True}"/>
-                                <field name="siswa_id" options="{'no_create_edit': True,'no_open':True}" />                    
+                                <field name="tahunajaran_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}"/>
+                                <field name="siswa_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />                    
                                 <field name="induk" readonly='1' />                    
                             </group>
                             <group>
-                                <!-- <field name="active_rombel_id" options="{'no_create_edit': True,'no_open':True}" /> -->
-                                <field name="rombel_asal_id" options="{'no_create_edit': True,'no_open':True}" />
-                                <field name="rombel_tujuan_id" options="{'no_create_edit': True,'no_open':True}" />
+                                <!-- <field name="active_rombel_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" /> -->
+                                <field name="rombel_asal_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />
+                                <field name="rombel_tujuan_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />
                             </group>
                         </group>
                     </sheet>
