--- a/views/wizard_report_form_presensi.xml
+++ b/views/wizard_report_form_presensi.xml
@@ -9,11 +9,11 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="tahunajaran_id" options="{'no_create_edit': True,'no_open':True}" />
+                                <field name="tahunajaran_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />
                                 <field name="tanggal" />
                             </group>
                             <group>
-                                <field name="rombel_id" options="{'no_create_edit': True,'no_open':True}" />
+                                <field name="rombel_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />
                             </group>
                         </group>
                     </sheet>
