Fixing togle_active siswa

--- a/views/res_siswa.xml
+++ b/views/res_siswa.xml
@@ -51,6 +51,9 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="priority" eval="22"/>
             <field name="arch" type="xml">
+                <xpath expr='//div[@name="button_box"]/button[1]' position="attributes">
+                    <attribute name="attrs">{'invisible':[('active', '=', True)]}</attribute>
+                </xpath>
                 <xpath expr="//form/sheet/group/group/label[1]" position="replace">                
                 </xpath>
                 <xpath expr="//form/sheet/group/group/div[1]" position="replace">                
