--- a/views/rombel.xml
+++ b/views/rombel.xml
@@ -10,6 +10,7 @@
                     <field name="name"/>
                     <field name="jenjang_id"/>
                     <field name="kapasitas" invisible="1" />
+                    <field name="is_show_on_dashboard" widget="boolean_toggle"/>
                 </tree>
             </field>
         </record>
@@ -31,7 +32,7 @@
                             <field name="name"/>
                             <field name="jenjang_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />
                             <field name="kapasitas" invisible="1" />
-                            <field name="is_show_on_dashboard"  attrs="{'invisible': [('name', '=', False)]}" />
+                            <field name="is_show_on_dashboard"  invisible="1" />
                         </group>
                     </sheet>
                 </form>
