--- a/views/res_siswa.xml
+++ b/views/res_siswa.xml
@@ -159,8 +159,8 @@
                             </group>
                             <field name="rombels" readonly="1" >
                                 <tree editable="bottom"  >
-                                    <field name="tahunajaran_id" context="{'active_test': False}" />
-                                    <field name="rombel_id" />
+                                    <field name="tahunajaran_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" context="{'active_test': False}" />
+                                    <field name="rombel_id" options="{'no_create':True, 'no_edit':True, 'no_create_edit': True, 'no_open':True}" />
                                 </tree>
                             </field>
                         </page>
@@ -210,6 +210,19 @@
                     <field name="phone" /> 
                     <field name="mobile" /> 
                 </field> -->
+            </field>
+        </record>
+
+        <record id="siswa_ocb11.siswa_form_root" model="ir.ui.view" >
+            <field name="name">root_siswa_ocb11.siswa_form</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="siswa_ocb11.siswa_form"/>
+            <field name="groups_id" eval="[(6, 0, [ref('base.user_root')])]"/>
+            <field name="priority" eval="23"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='rombels']" position="attributes">
+                    <attribute name="readonly">False</attribute>
+                </xpath>
             </field>
         </record>
 
